Fix spacing issue with hours page

--- a/src/style.css
+++ b/src/style.css
@@ -146,6 +146,13 @@ img {
     border-radius: 10px;
 }
 
+#bodyHours{
+    grid-row-start: 1;
+    grid-row-end: -1;
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
 #hoursContent {
     background-color: var(--lightTeal);
     color:var(--red);
